--- a/notebooks/01_getting_started/05_jax_gpu.ipynb
+++ b/notebooks/01_getting_started/05_jax_gpu.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get GPU and Cuda info:"
+    "Get GPU,Cuda and CuDNN info:"
    ]
   },
   {
@@ -23,7 +23,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: nvidia-smi: not found\n"
+      "Fri Feb 26 09:20:38 2021       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 450.80.02    Driver Version: 450.80.02    CUDA Version: 11.1     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                               |                      |               MIG M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  Tesla T4            On   | 00000000:00:1E.0 Off |                    0 |\n",
+      "| N/A   31C    P8     9W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                                  |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+      "|        ID   ID                                                   Usage      |\n",
+      "|=============================================================================|\n",
+      "|  No running processes found                                                 |\n",
+      "+-----------------------------------------------------------------------------+\n"
      ]
     }
    ],
@@ -40,12 +59,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: 1: nvcc: not found\n"
+      "nvcc: NVIDIA (R) Cuda compiler driver\n",
+      "Copyright (c) 2005-2020 NVIDIA Corporation\n",
+      "Built on Mon_Oct_12_20:09:46_PDT_2020\n",
+      "Cuda compilation tools, release 11.1, V11.1.105\n",
+      "Build cuda_11.1.TC455_06.29190527_0\n"
      ]
     }
    ],
    "source": [
     "!nvcc --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#define CUDNN_MAJOR 8\n",
+      "#define CUDNN_MINOR 0\n",
+      "#define CUDNN_PATCHLEVEL 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from https://stackoverflow.com/questions/31326015/how-to-verify-cudnn-installation/36978616\n",
+    "!cat /usr/include/cudnn_version.h | grep '#define CUDNN_MAJOR' -A 2"
    ]
   },
   {
@@ -57,21 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cpu\n"
+      "gpu\n"
      ]
     }
    ],
@@ -90,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,17 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "key = random.PRNGKey(0)\n",
     "size = 3000\n",
@@ -128,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4 s ± 141 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "13 ms ± 3.71 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -152,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "774 ms ± 195 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "122 ms ± 1.09 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
